Local Strategy PassportJS

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://admin:adMxIsPCbeaKbVtQ@data.54c50.gcp.mongodb.net/PicDacNoe?retryWrites=true&w=majority
+JWT_SECRET=no-one-will-know
