--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
 		"start": "node ./bin/www"
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.0",
 		"cookie-parser": "~1.4.5",
+		"cookie-session": "^1.4.0",
 		"debug": "~4.3.1",
 		"dotenv": "^8.2.0",
 		"express": "~4.17.1",
 		"http-errors": "~1.8.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.11.4",
-		"morgan": "~1.10.0"
+		"morgan": "~1.10.0",
+		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0"
 	}
 }
