--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://admin:adMxIsPCbeaKbVtQ@data.54c50.gcp.mongodb.net/PicDacNoe?retryWrites=true&w=majority
 JWT_SECRET=no-one-will-know
+CLIENT_URL=http://localhost:3001
