--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"bcrypt": "^5.0.0",
 		"cookie-parser": "~1.4.5",
 		"cookie-session": "^1.4.0",
+		"cors": "^2.8.5",
 		"debug": "~4.3.1",
 		"dotenv": "^8.2.0",
 		"express": "~4.17.1",
@@ -18,6 +19,7 @@
 		"morgan": "~1.10.0",
 		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"socket.io": "^3.0.4"
 	}
 }
