--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"morgan": "~1.10.0",
 		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"socket.io": "^3.0.4"
 	}
 }
