edit CLIENT_URL env varible

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb+srv://admin:adMxIsPCbeaKbVtQ@data.54c50.gcp.mongodb.net/PicDacNoe?retryWrites=true&w=majority
 JWT_SECRET=no-one-will-know
 LOCAL_CLIENT_URL=http://localhost:3000
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://pic-dac-noe-frontend.vercel.app
