--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-	"name": "backend",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"start": "node ./bin/www"
-	},
-	"dependencies": {
-		"bcrypt": "^5.0.0",
-		"cookie-parser": "~1.4.5",
-		"cors": "^2.8.5",
-		"debug": "~4.3.1",
-		"dotenv": "^8.2.0",
-		"express": "~4.17.1",
-		"http-errors": "~1.8.0",
-		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.11.4",
-		"morgan": "~1.10.0",
-		"passport": "^0.4.1",
-		"passport-jwt": "^4.0.0",
-		"passport-local": "^1.0.0",
-		"socket.io": "^3.0.4"
-	}
+  "name": "backend",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "nodemon ./bin/www",
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "~1.4.5",
+    "cors": "^2.8.5",
+    "debug": "~4.3.1",
+    "dotenv": "^8.2.0",
+    "express": "~4.17.1",
+    "http-errors": "~1.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.4",
+    "morgan": "~1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "socket.io": "^3.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
