--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "debug": "~4.3.1",
     "dotenv": "^8.2.0",
-    "express": "~4.17.1",
+    "express": "^4.17.1",
+    "http": "0.0.1-security",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.4",
