--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
+    "mongoose-sequence": "^5.3.0",
     "morgan": "~1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
