Add Email Confirmation

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGO_URI=mongodb+srv://admin:adMxIsPCbeaKbVtQ@data.54c50.gcp.mongodb.net/PicDac
 JWT_SECRET=no-one-will-know
 LOCAL_CLIENT_URL=http://localhost:3000
 CLIENT_URL=https://pic-dac-noe-frontend.vercel.app
+MAIL_USER=bsicno999@gmail.com
+MAIL_PASS=ba55f0rwebnc
